Correcciones de la gestión de rutas y mejoras visuales